# gt_datahub

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gtfw_package.json
examples/: CMakeLists.txt  example_interactive.cpp  example_minimal.cpp
include/gt_datahub/: data_type.hpp  errors.hpp  i_datahub.hpp  i_datahub_runtime.hpp  i_internal_producer.hpp  quality.hpp  timestamp.hpp  update_request.hpp  value.hpp  variable_definition.hpp  variable_role.hpp  variable_state.hpp  visibility_control.hpp
include/gtfw/pkg/gt_datahub/: package_info.hpp
specs/: datahub_anexo_tecnico_v3_7_2.md  datahub_backlog_inicial_v3_7_2.md  datahub_checklist_avanco_implementacao_v3_7_2.md  datahub_governanca_baseline_v3_7_2.md  datahub_out_of_scope_v1_0.md  datahub_padrao_documentacao_codigo.md  datahub_roadmap_v3_7_2.md  datahub_spec_funcional_v3_7_2.md
src/core/: compiled_catalog.hpp  predicate_compiler.hpp  selector_parser.hpp  state_store.hpp  text_resolver.hpp  text_template_compiler.hpp
src/runtime/: datahub_runtime.hpp  i_runtime_hub_access.hpp  on_change_dispatcher.hpp  yaml_loader.hpp
test/: CMakeLists.txt  main_test.cpp
test/core/: compiled_catalog_test.cpp  predicate_compiler_test.cpp  selector_parser_test.cpp  state_store_quality_test.cpp  state_store_test.cpp  text_resolver_test.cpp  text_template_compiler_test.cpp
test/gt_datahub/: data_type_header_test.cpp  errors_header_test.cpp  i_datahub_header_test.cpp  i_datahub_runtime_header_test.cpp  i_internal_producer_header_test.cpp  interface_mocks_test.cpp  public_api_smoke_test.cpp  public_model_smoke_test.cpp  public_types_test.cpp  quality_header_test.cpp  timestamp_header_test.cpp  update_request_header_test.cpp  update_request_test.cpp  value_header_test.cpp  value_test.cpp  variable_definition_header_test.cpp  variable_definition_test.cpp  variable_role_header_test.cpp  variable_state_header_test.cpp  variable_state_test.cpp
test/runtime/: datahub_runtime_test.cpp  resolve_text_test.cpp  yaml_loader_test.cpp
